--- a/src/main.css
+++ b/src/main.css
@@ -94,7 +94,7 @@ body{
     25.8140%, 26.5349% { content: "web developer"; }
   
     /* ai-ml developer */
-    50.4186%, 99.9302% { content: ""; }
+    /* 50.4186%, 99.9302% { content: ""; }
     52.5581%, 98.7907% { content: "a"; }
     54.6977%,  97.6512%{ content: "ai"; }
     56.8372%,  96.5116%{ content: "ai-"; }
@@ -109,7 +109,7 @@ body{
     74.0930%, 86.5349% { content: "ai-ml develo"; }
     76.2326%, 84.3953% { content: "ai-ml develop"; }
     78.3721%, 82.2558% { content: "ai-ml develope"; }
-    78.5116%, 80.1163% { content: "ai-ml developer"; }
+    78.5116%, 80.1163% { content: "ai-ml developer"; } */
   }
   
 
